[gd_scene load_steps=4 format=2]

[ext_resource path="res://Personaje.gd" type="Script" id=1]
[ext_resource path="res://assets/colored_transparent.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.31004, 8.34467 )

[node name="Personaje" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 307.575, 157.779, 12.6489, 11.4376 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="GunPosition" type="Position2D" parent="."]

[node name="GunTimer" type="Timer" parent="."]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
